# postgres_mcp

./: README.md  docker-compose.yml  pyproject.toml  pytest.ini  smithery.yaml  test_connectivity.py
.github/workflows/: ci.yml  publish.yml
docs/: INSTALLATION.md
postgres_mcp/: __init__.py  server.py
python/: Dockerfile  docker-compose.yml  pyproject.toml  server.json
python/scripts/: init_sample_db.sql
python/tests/: test_integration.py
scripts/: evaluate_mcp.py  test_mcp_protocol.py
tests/: conftest.py  test_connectivity_check.py  test_db_connection.py  test_env_config.py  test_mcp_server.py
typescript/: Dockerfile  docker-entrypoint.sh  package-lock.json  package.json  smithery.yaml  tsconfig.json
typescript/src/: client.ts  index.ts  prompts.ts  resources.ts  security.ts  settings.ts  tools.ts  types.ts  utils.ts
