[tool.poetry]
name = "postgres-mcp"
version = "0.1.0"
description = "MCP server for PostgreSQL with query, schema, and table management tools"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "postgres_mcp"}]

[tool.poetry.dependencies]
python = "^3.10"
mcp = "^1.0.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
postgres-mcp = "postgres_mcp.server:main" 